Fixed visual issues on mobile devices

--- a/styles.css
+++ b/styles.css
@@ -3,7 +3,7 @@
     font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
     font-size: 98px;
     font-weight: bold;
-    margin-top: 25%;
+    margin-top: 15%;
     text-align: center;
     transition: 1s;
     color: #947EB0;
@@ -20,7 +20,7 @@
     font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
     font-style: italic;
     transition: 1s;
-    margin-bottom: 65%;
+    margin-bottom: 25%;
 }
 .whisper:hover
 {
@@ -29,9 +29,9 @@
 .flexbox
 {
     display: flex;
-    justify-content: space-evenly;
-    width: 100%;
-    height: 100%;
+    justify-content: space-around;
+    margin: auto;
+   
 }
 .sec
 {
@@ -69,4 +69,9 @@
 body
 {
     background-color: #4A4236;
+}
+@media only screen and (max-width: 767px) {
+     {
+        text-align: center;
+    }
 }
